new data wrangling exercise

--- a/unit1/Data Cleaning and Wrangling Exercise.ipynb
+++ b/unit1/Data Cleaning and Wrangling Exercise.ipynb
@@ -68,7 +68,8 @@
    "source": [
     "### Question 1:\n",
     "\n",
-    "Please show both the first few rows of the dataset."
+    "1. Please show both the first few rows of the dataset.\n",
+    "2. Using the .groupby() function show how many survived based off of the column Sex. Hint: You need to use both Sex and Survived."
    ]
   },
   {
@@ -96,14 +97,24 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
    "source": [
-    "### Question 3:\n"
+    "### Question 3:\n",
+    "1.\tUsing the .loc function create a new column of data called Senior:\n",
+    "    * Males older than 50 labeled as a text \"Male Senior\"\n",
+    "    * Femles older than 50 labled as a text \"Female Senior\"\n",
+    "2.\tUsing the .loc function create a new column of data called Age Group:\n",
+    "    * Look at the Age column and find all passengers who are < 1 and labeled it as a text \"Baby\"\n",
+    "    * Any age between 1 and 10 label it as \"Infant\"\n",
+    "    * Any age between 10 and 20 as \"Teenager\"\n",
+    "    * Any age bove 20 as \"Adult\"\n",
+    "3.\tUsing some of the pivot techniques or .groupby show the following\n",
+    "    * How many male and female seniors survived.\n",
+    "    * How many survived in each age group.\n",
+    "    "
    ]
   }
  ],
